Table users {
  id bigint [pk, increment]
  username varchar(255) [not null, unique]
  password varchar(255) [not null]
  email varchar(255) [not null]
  name varchar(255) [not null]
  role varchar(20) [not null, note: 'CLIENT, TRAINER, ADMIN']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table clients {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, unique]
  phone varchar(50) [not null]
  registration_date date [default: `CURRENT_DATE`]
}

Table trainers {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, unique]
  description varchar(1000)
  experience_years int
}

Table membership_types {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  duration_days int [not null]
  price decimal(10,2) [not null]
  description varchar(1000)
}

Table memberships {
  id bigint [pk, increment]
  client_id bigint [not null, ref: > clients.id]
  membership_type_id bigint [not null, ref: > membership_types.id]
  start_date date [not null]
  end_date date [not null]
  price decimal(10,2) [not null]
  status varchar(20) [not null, note: 'ACTIVE, EXPIRED, CANCELLED']
}

Table workout_types {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  duration_minutes int [not null]
  hall varchar(255) [not null]
  capacity int [not null]
  description varchar(1000)
}

Table schedule_workouts {
  id bigint [pk, increment]
  day_of_week varchar(20) [not null, note: 'MONDAY..SUNDAY']
  start_time time [not null]
  workout_type_id bigint [not null, ref: > workout_types.id]
  trainer_id bigint [not null, ref: > trainers.id]
}

Table bookings {
  id bigint [pk, increment]
  client_id bigint [not null, ref: > clients.id]
  schedule_workout_id bigint [not null, ref: > schedule_workouts.id]
  workout_date timestamp [not null]
  status varchar(20) [not null, default: 'BOOKED',
    note: 'BOOKED, ATTENDED, NOT_ATTENDED, CANCELLED']
}
